--- a/app/src/main/res/layout/fragment_service.xml
+++ b/app/src/main/res/layout/fragment_service.xml
@@ -17,7 +17,25 @@
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme" />
+            android:theme="?attr/actionBarTheme"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/textViewServiceToolbarTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/notosans_bold"
+                android:includeFontPadding="false"
+                android:text="text"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="22dp" />
+        </com.google.android.material.appbar.MaterialToolbar>
+
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/serviceTabLayout"
@@ -51,23 +69,11 @@
                 android:includeFontPadding="false"
                 android:text="1:1문의" />
         </com.google.android.material.tabs.TabLayout>
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white">
 
-        <LinearLayout
+        <FrameLayout
+            android:id="@+id/serviceFrameLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent" />
 
-            <FrameLayout
-                android:id="@+id/serviceFrameLayout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </LinearLayout>
-    </ScrollView>
     </LinearLayout>
-
-
 </FrameLayout>
