--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -9,12 +9,14 @@
     tools:context=".SplashScreenActivity">
 
     <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/splashscreenImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/aparttalk"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.499" />
 
