--- a/app/src/main/res/layout/fragment_fire_check_main.xml
+++ b/app/src/main/res/layout/fragment_fire_check_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:transitionGroup="true"
-    tools:context=".ui.entiremenu.FireCheck.FireCheckMainFragment">
+    tools:context=".ui.entiremenu.FireCheck.fragment.FireCheckMainFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbarFireCheck1"
