--- a/app/src/main/res/layout/fragment_fire_extinguisher2_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_fire_extinguisher2_bottom_sheet.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/bottom_sheet_rounding"
     android:orientation="vertical"
     android:padding="20dp"
-    tools:context=".ui.entiremenu.FireCheck.FireExtinguisher2BottomSheetFragment" >
+    tools:context=".ui.entiremenu.FireCheck.fragment.FireExtinguisher2BottomSheetFragment" >
 
     <LinearLayout
         android:layout_width="match_parent"
