--- a/app/src/main/res/layout/activity_location_show.xml
+++ b/app/src/main/res/layout/activity_location_show.xml
@@ -81,6 +81,7 @@
 
             <com.kakao.vectormap.MapView
                 android:id="@+id/map_view"
+                android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="400dp" />
 
