--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -237,6 +237,7 @@
                 android:textStyle="bold" />
 
             <ImageView
+                android:id="@+id/infoImageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
