--- a/app/src/main/res/layout/fragment_my_like.xml
+++ b/app/src/main/res/layout/fragment_my_like.xml
@@ -7,25 +7,42 @@
     tools:context=".ui.mywrite.MyLikeFragment">
 
 
-    <ScrollView
+    <LinearLayout
+        android:id="@+id/myLikeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone"
+        tools:visibility="gone">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewTabMyLike"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="20dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/myLikeBlankLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <View
+            android:id="@+id/view3"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="300dp" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerViewTabMyLike"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginHorizontal="20dp" />
-        </LinearLayout>
-    </ScrollView>
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:fontFamily="@font/notosans_semibold"
+            android:text="좋아요 한 글이 없습니다."
+            android:textSize="16sp" />
+    </LinearLayout>
 
 </FrameLayout>
