feat #126 내 정보 수정 데이터 추가

--- a/app/src/main/res/layout/fragment_edit_user_info.xml
+++ b/app/src/main/res/layout/fragment_edit_user_info.xml
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:text="이름"
-                android:textSize="16dp" />
+                android:textSize="16sp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/editUserInfoNameTextFiled"
@@ -60,7 +60,7 @@
                     android:layout_height="wrap_content"
                     android:hint="이름을 입력해주세요."
                     android:inputType="text"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
@@ -68,7 +68,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="휴대폰 번호"
-                android:textSize="16dp" />
+                android:textSize="16sp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/editUserInfoNumberTextFiled"
@@ -85,7 +85,7 @@
                     android:layout_height="wrap_content"
                     android:hint="휴대폰 번호를 입력해주세요."
                     android:inputType="number"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
@@ -93,7 +93,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="생년월일"
-                android:textSize="16dp" />
+                android:textSize="16sp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/editUserInfoBirthTextFiled"
@@ -110,13 +110,14 @@
                     android:layout_height="wrap_content"
                     android:hint="생년월일을 입력해주세요."
                     android:inputType="number"
-                    android:textSize="16dp" />
+                    android:textSize="16sp"
+                    android:enabled="false"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="16sp"
                 android:text="이메일"
                 android:textSize="16dp" />
 
@@ -134,8 +135,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="이메일을 입력해주세요."
-                    android:inputType="text"
-                    android:textSize="16dp" />
+                    android:inputType="textEmailAddress"
+                    android:textSize="16sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
@@ -143,7 +144,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="주소"
-                android:textSize="16dp" />
+                android:textSize="16sp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/editUserInfoAdressTextFiled"
@@ -160,7 +161,7 @@
                     android:layout_height="wrap_content"
                     android:hint="주소를 입력해주세요."
                     android:inputType="text"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -178,7 +179,7 @@
                     android:layout_height="wrap_content"
                     android:hint="상세주소를 입력해주세요."
                     android:inputType="text"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <androidx.appcompat.widget.AppCompatButton
@@ -190,7 +191,7 @@
                 android:background="@drawable/style_pointbutton_radias"
                 android:text="다음"
                 android:textColor="@color/white"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
