feat : #135 이용시설 데이터 받아오기 구현

--- a/app/src/main/res/layout/activity_detail_facility.xml
+++ b/app/src/main/res/layout/activity_detail_facility.xml
@@ -76,6 +76,13 @@
             android:text="여기는 101동 옆 놀이터입니다 이곳은 00 테마를 적용하여 만든 놀이터입니다. ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~" />
 
 
+        <TextView
+            android:id="@+id/textFacilityPrice"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="TextView" />
+
         <com.google.android.material.card.MaterialCardView
             style="@style/Widget.Material3.CardView.Outlined"
             android:layout_width="match_parent"
