--- a/app/src/main/res/layout/item_facility_grid.xml
+++ b/app/src/main/res/layout/item_facility_grid.xml
@@ -17,8 +17,9 @@
 
         <ImageView
             android:id="@+id/imageFacilityGrid"
-            android:layout_width="80dp"
-            android:layout_height="75dp"
+            android:layout_width="90dp"
+            android:layout_height="85dp"
+            android:adjustViewBounds="true"
             app:srcCompat="@drawable/ic_launcher_foreground" />
 
         <TextView
