fix : #145 메인 레이아웃 수정

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -79,6 +79,7 @@
                         android:layout_height="wrap_content">
 
                         <TextView
+                            android:id="@+id/textLocationTitle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/notosans_semibold"
@@ -96,9 +97,13 @@
                             android:fontFamily="@font/notosans_semibold"
                             android:includeFontPadding="false"
                             android:text="서울 송파구 장지동"
+                            android:ellipsize="end"
+                            android:singleLine="true"
                             android:textColor="@color/white"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/textLocationTitle"
+                            android:layout_marginStart="45dp"
                             app:layout_constraintTop_toTopOf="parent" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
