--- a/app/src/main/res/layout/row_mywrote_tab_wrote.xml
+++ b/app/src/main/res/layout/row_mywrote_tab_wrote.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rowMyWroteLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/white"
     android:orientation="vertical">
 
