--- a/app/src/main/res/layout/fragment_community_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_community_bottom_sheet.xml
@@ -18,7 +18,7 @@
 
     <View
         android:id="@+id/divider9"
-        android:layout_width="406dp"
+        android:layout_width="wrap_content"
         android:layout_height="1dp"
         android:layout_gravity="center_horizontal"
         android:background="@color/lightGray" />
@@ -42,7 +42,7 @@
 
     <View
         android:id="@+id/divider10"
-        android:layout_width="406dp"
+        android:layout_width="wrap_content"
         android:layout_height="1dp"
         android:layout_gravity="center_horizontal"
 
@@ -65,7 +65,7 @@
 
     <View
         android:id="@+id/divider11"
-        android:layout_width="406dp"
+        android:layout_width="wrap_content"
         android:layout_height="1dp"
         android:layout_gravity="center_horizontal"
         android:background="@color/lightGray" />
