--- a/app/src/main/res/layout/row_community_detail_comment.xml
+++ b/app/src/main/res/layout/row_community_detail_comment.xml
@@ -77,10 +77,9 @@
                     android:layout_gravity="center"
 
                     android:fontFamily="@font/notosans_semibold"
-                    android:text="text"
+                    android:includeFontPadding="false"
                     android:textColor="@color/black"
-                    android:textSize="12sp"
-                    android:includeFontPadding="false"/>
+                    android:textSize="12sp" />
             </LinearLayout>
 
             <TextView
@@ -90,10 +89,9 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp"
                 android:fontFamily="@font/notosans_regular"
-                android:text="text"
+                android:includeFontPadding="false"
                 android:textColor="@color/black"
-                android:textSize="12sp"
-                android:includeFontPadding="false"/>
+                android:textSize="12sp" />
 
         </LinearLayout>
 
