--- a/app/src/main/res/layout/fragment_view_announcement.xml
+++ b/app/src/main/res/layout/fragment_view_announcement.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/white"
     tools:context=".ui.service.ViewAnnouncementFragment">
@@ -13,7 +13,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context=".fragment.service.ViewAnnouncementFragment">
-
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/viewAnnouncementToolbar"
@@ -51,7 +50,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-
                 <TextView
                     android:id="@+id/viewAnnouncementTextViewTitle"
                     android:layout_width="match_parent"
@@ -77,9 +75,11 @@
                         android:fontFamily="@font/notosans_medium"
                         android:gravity="top"
                         android:includeFontPadding="false"
-                        android:inputType="text|textMultiLine"
-                        android:text="제목입니다."
-                        android:textSize="14dp" />
+                          android:text="제목입니다."
+                    android:textSize="14dp"
+                        android:inputType="none"
+                    android:focusable="false"
+                    android:cursorVisible="false" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
@@ -108,16 +108,16 @@
                         android:gravity="top"
                         android:fontFamily="@font/notosans_medium"
                         android:includeFontPadding="false"
-                        android:text="공지사항 입니다."
-                        android:inputType="text|textMultiLine"
-                        android:textSize="14dp" />
+                        android:inputType="none"
+                    android:text="공지사항 입니다."
+                    android:textSize="14dp"
+                    android:focusable="false"
+                    android:cursorVisible="false" />
                 </com.google.android.material.textfield.TextInputLayout>
-
 
             </LinearLayout>
 
         </ScrollView>
-
 
     </LinearLayout>
 </LinearLayout>
