--- a/app/src/main/res/layout/fragment_view_f_a_q.xml
+++ b/app/src/main/res/layout/fragment_view_f_a_q.xml
@@ -77,7 +77,9 @@
                         android:fontFamily="@font/notosans_medium"
                         android:gravity="top"
                         android:includeFontPadding="false"
-                        android:inputType="text|textMultiLine"
+                        android:inputType="none"
+                        android:focusable="false"
+                        android:cursorVisible="false"
                         android:text="질문입니다."
                         android:textSize="14dp" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -108,7 +110,9 @@
                         android:fontFamily="@font/notosans_medium"
                         android:gravity="top"
                         android:includeFontPadding="false"
-                        android:inputType="text|textMultiLine"
+                        android:inputType="none"
+                        android:focusable="false"
+                        android:cursorVisible="false"
                         android:text="내용 입니다."
                         android:textSize="14dp" />
                 </com.google.android.material.textfield.TextInputLayout>
