fix ; #170 레이아웃 수정

--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -32,5 +32,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerviewAlarm"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:padding="20dp" />
 </LinearLayout>
