--- a/app/src/main/res/layout/fragment_inquiry_tab.xml
+++ b/app/src/main/res/layout/fragment_inquiry_tab.xml
@@ -48,13 +48,15 @@
         android:padding="20dp">
 
 
-        <com.google.android.material.search.SearchBar
-            android:id="@+id/inquiryTabSearchbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:hint="키워드 검색"
-            android:textAppearance="@color/gray" />
+<!--        <androidx.appcompat.widget.SearchView-->
+<!--            android:id="@+id/search"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="100dp"-->
+<!--            android:focusable="true"-->
+<!--            android:padding="6dp"-->
+<!--            app:iconifiedByDefault="false"-->
+<!--            app:layout_constraintVertical_weight="1"-->
+<!--            app:queryHint="검색어를 입력하세요" />-->
 
         <ScrollView
             android:layout_width="match_parent"
