--- a/app/src/main/res/layout/activity_apt_schedule.xml
+++ b/app/src/main/res/layout/activity_apt_schedule.xml
@@ -77,7 +77,7 @@
                 android:fontFamily="@font/notosans_medium"
                 android:gravity="center"
                 android:includeFontPadding="false"
-                android:text="  쓰레기 점검"
+                android:text="  쓰레기 수거"
                 android:textSize="12sp" />
         </LinearLayout>
 
