#182 [fix] 전체메뉴/ 아파트일정 에서 현재날짜에도 리사이클러뷰 뜨도록 하기

--- a/app/src/main/res/layout/fragment_apt_schedule_show_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_apt_schedule_show_bottom_sheet.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/bottom_sheet_rounding"
     android:orientation="vertical"
     android:padding="20dp"
-    tools:context=".ui.entiremenu.AptSchedule.fragment.AptScheduleShowBottomSheetFragment">
+    tools:context=".ui.entiremenu.AptSchedule.AptScheduleShowBottomSheetFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
